# AMBER

./: CMakeLists.txt  Makefile  README.md  install_full_pipeline.sh
confs/: dedispersion.inc  integration.inc  integrationDMsSamples.inc  integration_steps.inc  padding.inc  snr.inc  snrD.inc  snrDMsSamples.inc  vector.inc
include/: BeamDriver.hpp  CommandLine.hpp  DataTypes.hpp  KernelGenerator.hpp  Kernels.hpp  Memory.hpp  Pipeline.hpp  Timing.hpp  Trigger.hpp  configuration.hpp
src/: AMBER.cpp  BeamDriver.cpp  CommandLine.cpp  KernelGenerator.cpp  Kernels.cpp  Memory.cpp  Pipeline.cpp  TransientSearch.cpp  Trigger.cpp  printTimeSeries.cpp
